--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	scroll-behavior: smooth;
+	font-family: 'Poppins', sans-serif;
+}
+a,
+span,
+p {
+	font-family: 'Fira Code', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+	min-height: 100vh;
+	background-color: #0a192f;
+}
+a {
+	text-decoration: none;
+}
+li {
+	list-style: none;
+}
+
+::-webkit-scrollbar {
+	width: 6px;
+	height: 5px;
+}
+
+::-webkit-scrollbar-corner {
+	height: 0;
+}
+
+::-webkit-scrollbar-track {
+	background-color: transparent;
+	border-radius: 25px;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: lightblue;
+	border-radius: 25px;
 }
